Replaced day-night theme with manual control over themes

--- a/app/src/main/res/layout/activity_edit_feed.xml
+++ b/app/src/main/res/layout/activity_edit_feed.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/editWindow"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@color/window_background"
+  android:background="?attr/windowBackgroundColor"
   android:orientation="vertical"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
