--- a/app/src/main/res/drawable/simple_divider.xml
+++ b/app/src/main/res/drawable/simple_divider.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/accent" />
+    <solid android:color="?attr/colorAccent" />
 </shape>
