--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -2,10 +2,11 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/feedContainer"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@color/window_background"
+  android:background="?attr/windowBackgroundColor"
   tools:context="com.nononsenseapps.feeder.ui.FeedActivity">
 
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
