--- a/app/src/main/res/layout/list_story_item.xml
+++ b/app/src/main/res/layout/list_story_item.xml
@@ -109,7 +109,7 @@
 
     <TextView
       android:id="@+id/story_snippet"
-      style="@style/TextAppearance.Title"
+      style="@style/TextAppearance.ListItem.Title"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
