--- a/app/src/main/res/layout/view_feed_tag.xml
+++ b/app/src/main/res/layout/view_feed_tag.xml
@@ -37,7 +37,7 @@
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:textColor="@color/secondary_text_color"
+    android:textColor="?android:attr/textColorSecondary"
     android:textSize="@dimen/navdrawer_unreadcount_textsize"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
