--- a/app/src/main/res/layout/activity_edit_feed.xml
+++ b/app/src/main/res/layout/activity_edit_feed.xml
@@ -134,6 +134,7 @@
       android:layout_height="0dp"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="8dp"
+      android:contentDescription="@string/discovered_feeds_list"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
