--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -31,6 +31,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|end"
     android:layout_margin="@dimen/fab_margin"
+    android:contentDescription="@string/mark_all_as_read"
     app:srcCompat="@drawable/ic_done_all_white_24dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
