Updated share menu to use modern chooser
Fixes #262

--- a/app/src/main/res/menu/webview.xml
+++ b/app/src/main/res/menu/webview.xml
@@ -22,7 +22,7 @@
     app:showAsAction="ifRoom" />
   <item
     android:id="@+id/action_share"
+    android:icon="@drawable/ic_share_white_24dp"
     android:title="@string/share"
-    app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
     app:showAsAction="ifRoom" />
 </menu>
