--- a/app/src/main/res/menu/reader.xml
+++ b/app/src/main/res/menu/reader.xml
@@ -38,8 +38,8 @@
     app:showAsAction="ifRoom" />
   <item
     android:id="@+id/action_share"
+    android:icon="@drawable/ic_share_white_24dp"
     android:title="@string/share"
-    app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
     app:showAsAction="ifRoom" />
   <item
     android:id="@+id/action_mark_as_unread"
